Changed wording of final thoughts

--- a/report/report.tex
+++ b/report/report.tex
@@ -295,7 +295,7 @@ Sarebbe interessante approfondire meglio la parte di analisi di dominio di un pr
 
 \subsection{Emma Leonardi}
 Mi è piaciuta la struttura del corso, i laboratori e l'attenzione dei docenti verso gli studenti. 
-Ho trovato difficile capire gli aspetti di Java più avanzati e avrei voluto dedicare più tempo su Stream e Pattern.
+Ho trovato di difficile comprensione gli aspetti di Programmazione ad Oggetti avanzati, come Stream e Pattern e avrei voluto gli si fosse dedicato più tempo.
 
 \appendix
 \chapter{Guida utente}
