--- a/report/report.tex
+++ b/report/report.tex
@@ -92,7 +92,7 @@ Il tempo del gioco è scandito dal Controller. Il movimento del cannone è invec
 	\includegraphics[width=\textwidth]{img/arch.pdf}
 	\caption{Schema UML architetturale del gioco. L'interfaccia \texttt{Controller} gestisce il flusso dell'applicazione, mentre la \texttt{View} gestisce l'interazione con l'utente e il \texttt{Model} fornisce le informazioni sul \texttt{Level}.}
 \end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \section{Design dettagliato}
 \subsection{Nicolò Guerra}
 \subsubsection{Caratteristiche della griglia di bolle}
@@ -166,7 +166,35 @@ e aumentarne l'efficienza. In questo modo è facile riutilizzare il meccanismo d
 
 \paragraph{Soluzione} È stato utilizzato il pattern Gameloop, creando un interfaccia che ne definisce le interazioni con il Controller, presso cui altri componenti che implementano Updatable possono registrarsi
 per essere aggiornati ad ogni ciclo.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Emma Leonardi}
+\subsubsection{Gestione del campo di Bolle}
+
+\begin{figure}[H]
+	\centering{}
+	\includegraphics[width=.7\textwidth]{img/bubble_grid.pdf}
+	\caption{UML del Gameloop}
+\end{figure}
+
+\paragraph{Problema} La griglia di Bolle deve essere indipendente dalla forma delle bolle
+
+\paragraph{Soluzione} Un interfaccia BubblesGrid con metodi che astraggono la forma delle bolle. 
+In particolare l'implementazione di BubblesGridImpl è per griglie di esagoni con la punta verso l'alto, 
+ma implementando l'interfaccia si possono creare griglie di qualsiasi forma di bolle.
+
+\subsubsection{Gestione di tre valori appaiati}
+
+\begin{figure}[H]
+	\centering{}
+	\includegraphics[width=.7\textwidth]{img/triplet.pdf}
+	\caption{UML del Gameloop}
+\end{figure}
+
+\paragraph{Problema} Nella griglia ho usato coordinate con tre valori e avevo necessità di un oggetto per memorizzarle
+
+\paragraph{Soluzione} Ho creato un'interfaccia generica che supporta qualsiasi tipo di tripletta di valori, poi implementata in una classe generica.
+Per poter sommare i valori ho poi creato una classe con metodi statici che fa la somma delle triplette.
+
 \subsection{Filippo Casadei}
 \subsubsection{Movimento e collisioni delle bolle}
 
@@ -225,36 +253,7 @@ begin{figure}[H]
 	\includegraphics[width=.7\textwidth]{img/drawers.pdf}
 	\caption{UML del CanvasDrawer}
 \end{figure}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\subsection{Emma Leonardi}
-\subsubsection{Gestione del campo di Bolle}
-
-\begin{figure}[H]
-	\centering{}
-	\includegraphics[width=.7\textwidth]{img/bubble_grid.pdf}
-	\caption{UML del Gameloop}
-\end{figure}
-
-\paragraph{Problema} La griglia di Bolle deve essere indipendente dalla forma delle bolle
-
-\paragraph{Soluzione} Un interfaccia BubblesGrid con metodi che astraggono la forma delle bolle. 
-In particolare l'implementazione di BubblesGridImpl è per griglie di esagoni con la punta verso l'alto, 
-ma implementando l'interfaccia si possono creare griglie di qualsiasi forma di bolle.
-
-\subsubsection{Gestione di tre valori appaiati}
-
-\begin{figure}[H]
-	\centering{}
-	\includegraphics[width=.7\textwidth]{img/triplet.pdf}
-	\caption{UML del Gameloop}
-\end{figure}
-
-\paragraph{Problema} Nella griglia ho usato coordinate con tre valori e avevo necessità di un oggetto per memorizzarle
-
-\paragraph{Soluzione} Ho creato un'interfaccia generica che supporta qualsiasi tipo di tripletta di valori, poi implementata in una classe generica.
-Per poter sommare i valori ho poi creato una classe con metodi statici che fa la somma delle triplette.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Sviluppo}
 \section{Testing automatizzato}
 
@@ -305,6 +304,17 @@ In questo progetto i miei compiti sono stati:
 	\item Somma di Triplette di valori interi (package bbblast.utils TripletIntegerUtility)
 \end{itemize}
 
+\subsection{Filippo Casadei}
+In questo progetto i miei compiti sono stati:
+\begin{itemize}
+	\item Bolle dinamiche (MovingBubble e MovingBubbleImpl, package bbblast.model)
+	\item Gestione del movimento e delle collisioni (MovementHandler e MovementHandlerImpl, package bbblast.model)
+	\item Divisione in punti (Position e PositionImpl, package bbblast.utils)
+	\item Grafica delle bolle (BubbleDrawer e BubbleDrawerImpl, package bbblast.view.singleplayer)
+	\item Disegnare la grafica di gioco (CanvasDrawer e CanvasDrawerImpl, package bbblast.view.singleplayer)
+	\item Creazione del livello di gioco (Level e LevelImpl, package bbblast.model.level)
+\end{itemize}
+
 \section{Note di sviluppo}
 
 \subsection{Nicolò Guerra}
@@ -347,6 +357,12 @@ perchè ci sono stati dei problemi di comunicazione e incomprensioni, spesso dov
 Non ha aiutato la coordinazione del progetto anche l'inesperienza, che ci ha fatto sottovalutare alcuni aspetti che si sono rivelati problemi implementativi. 
 In futuro cercherò di spiegarmi meglio sulle caratteristiche del software prodotto da me e comunicare meglio con i miei compagni di progetto. 
 
+\subsection{Filippo Casadei}
+Non sono soddisfatto di come è stato svolto il progetto. Sin dall'inizio della progettazione ci sono state numerose incomprensioni, che hanno portato a dover discutere più volte punti già trattati e capire come risolvere i problemi generati,
+rallentando di molto il lavoro di tutti i componenti. A causa di questi problemi a cui si aggiunge anche l'inesperienza di lavorare in progetti più complessi con un team di sviluppo il risultato finale non si può 
+assolutamente considerare un buon progetto. Sicuramente però è stata un'esperienza formativa considerando che da ogni sbaglio commesso si è potuto comprendere come sarebbe stato meglio agire, ad esempio una miglior comunicazione
+iniziale tra i membri definidendo più nello specifico gli aspetti dell'applicazione ed una miglior suddivisione dello sviluppo del software. 
+
 \section{Difficoltà incontrate e commenti per i docenti}
 \subsection{Nicolò Guerra}
 Sicuramente la caratteristica che ho apprezzato del corso è la disponibilità dei docenti, le correzioni in laboratorio allo svolgimento di ogni esercizio risultano molto utili per migliorare la tecnica.
@@ -355,6 +371,10 @@ Sarebbe interessante approfondire meglio la parte di analisi di dominio di un pr
 \subsection{Emma Leonardi}
 Mi è piaciuta la struttura del corso, i laboratori e l'attenzione dei docenti verso gli studenti. 
 Ho trovato di difficile comprensione gli aspetti di Programmazione ad Oggetti avanzati, come Stream e Pattern e avrei voluto gli si fosse dedicato più tempo.
+
+\subsection{Filippo Casadei}
+Il corso è stato molto interessante e i docenti hanno avuto la capacità di motivare l'interesse verso la materia e i laboratori si son rivelati esser di grande aiuto per i temi trattati nelle lezioni teoriche.
+L'unico punto da me non ben compreso sono gli aspetti riguardanti i pattern, il loro utilizzo e come riconoscere la necessità di utilizzarli.
 
 \appendix
 \chapter{Guida utente}
