Ended Lorenzo Tagliani's report

--- a/report/report.tex
+++ b/report/report.tex
@@ -385,8 +385,8 @@ Per la gestione delle coordinate su tre assi ho usato lo pseudocodice di Amit Pa
 
 \subsection{Lorenzo Tagliani}
 \begin{itemize}
-	\item 
-	\item 
+	\item JavaFX
+	\item Labda expressions
 \end{itemize}
 
 \chapter{Commenti finali}
