--- a/report/report.tex
+++ b/report/report.tex
@@ -386,7 +386,7 @@ Per la gestione delle coordinate su tre assi ho usato lo pseudocodice di Amit Pa
 \subsection{Lorenzo Tagliani}
 \begin{itemize}
 	\item JavaFX
-	\item Labda expressions
+	\item Lambda expressions
 \end{itemize}
 
 \chapter{Commenti finali}
