--- a/report/report.tex
+++ b/report/report.tex
@@ -287,20 +287,26 @@ La lista viene creata e gestita dalla classe ScoreTable, creata per semplificare
 \section{Testing automatizzato}
 
 Abbiamo usato JUnit 5 per fare test automatici delle classi. 
-Abbiamo testato le componenti del model fondamentali, come Bubble e Cannon, per assicurarci del loro corretto funzionamento.
-
-Il testing automatizzato è un requisito di qualunque progetto software che si rispetti, e consente di verificare che non vi siano regressioni nelle funzionalità a fronte di aggiornamenti.
-%
-Per quanto riguarda questo progetto è considerato sufficiente un test minimale, a patto che sia completamente automatico.
-%
-Test che richiedono l'intervento da parte dell'utente sono considerati \textit{negativamente} nel computo del punteggio finale.
-
-\subsection*{Elementi positivi}
-
+Abbiamo testato le seguenti classi:
 \begin{itemize}
-	\item Si descrivono molto brevemente i componenti che si è deciso di sottoporre a test automatizzato.
-	\item Si utilizzano suite specifiche (e.g. JUnit) per il testing automatico.
-	\item Se sono stati eseguiti test manuali di rilievo, si elencano descrivendo brevemente la ragione per cui non sono stati automatizzati. Ad esempio, se tutto il team sviluppa e testa su uno stesso sistema operativo e si sono svolti test manuali per verificare, ad esempio, il corretto funzionamento dell'interfaccia grafica o di librerie native su altri sistemi operativi, può avere senso menzionare la cosa.
+	\item GameLoop
+	\item RegularHexGrid
+	\item Level
+	\item BubbleGenerator
+	\item BubblesGrid
+	\item Bubble
+	\item Cannon
+	\item COLOR
+	\item MovementHandler
+	\item MovingBubble
+	\item Persister
+	\item Position
+	\item Score
+	\item ScoreManager
+	\item Triplet
+	\item TripletIntegerUtility
+	\item VectorConverter
+
 \end{itemize}
 
 \section{Metodologia di lavoro}
