Fixed report error

--- a/report/report.tex
+++ b/report/report.tex
@@ -472,13 +472,13 @@ Il tasto exit fa uscire dall'applicazione.
 \end{figure}
 Il cannone, posto in basso e nel centro della schermata, si comanda con i tasti 'A' e 'D' che rispettivamente lo fanno girare verso destra e sinistra.
 La bolla viene fatta sparare con il tasto 'W'. La bolla una volta sparata viaggia in linea retta e rimbalza se colpisce le pareti del campo di gioco.
-Le bolle si uniscono alla griglia e ci sono 4 o più bolle dello stesso colore, scoppiano aumentando il punteggio. Se si formano gruppi di bolle "volanti" ovvero senza nessuna bolla che li collega alla cima dello schermo, quando si elimina l'ultima bolla di sostegno anche le bolle volanti scoppiano.
+Le bolle si uniscono alla griglia e al raggiungimento di 4 o più bolle dello stesso colore, scoppiano aumentando il punteggio. Se si formano gruppi di bolle "volanti" ovvero senza nessuna bolla che li collega alla cima dello schermo, quando si elimina l'ultima bolla di sostegno anche le bolle volanti scoppiano.
 Il gioco finisce quando le bolle raggiungono i 4/5 dello schermo. A game over, viene presentata una schermata per salvare il punteggio.
 Si viene poi riportati nella schermata iniziale
 \begin{figure}[H]
 	\centering{}
 	\includegraphics[width=\textwidth]{img/game_over.pdf}
-	\caption{La schermata di gioco}
+	\caption{Il messaggio di GameOver}
 \end{figure}
 
 \chapter{Esercitazioni di laboratorio}
